fixed image name typo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="col-sm-12 col-l-12 col-xl-4 col-4 single-services">
                         <div class="row">
                             <div class="service-image-container">
-                                <img class="service-image" src="images/bank.png" alt="bank" />
+                                <img class="service-image" src="images/Bank.png" alt="bank" />
                             </div>
                         </div>
                         <div class="row service-description-container">
