updated footer images

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 
                         <div class="row recent-posts-container top-margin-o">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/room.png" alt="room" />
+                                <img class="recent-post-image" src="images/picjumbo.com_HNCK6001_2%20copy.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
@@ -524,7 +524,7 @@
 
                         <div class="row recent-posts-container top-margin-o">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/room.png" alt="room" />
+                                <img class="recent-post-image" src="images/road.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
@@ -534,7 +534,7 @@
 
                         <div class="row recent-posts-container top-margin-o">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/room.png" alt="room" />
+                                <img class="recent-post-image" src="images/noidea.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
@@ -544,7 +544,7 @@
 
                         <div class="row recent-posts-container top-margin-o">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/room.png" alt="room" />
+                                <img class="recent-post-image" src="images/insect.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
