--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
                         <div class="row recent-posts-container top-margin">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/room.png" alt="room" />
+                                <img class="recent-post-image" src="images/glass.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
@@ -514,7 +514,7 @@
 
                         <div class="row recent-posts-container top-margin-o">
                             <div class="col-sm-12 col-l-2 col-2">
-                                <img class="recent-post-image" src="images/picjumbo.com_HNCK6001_2%20copy.png" alt="room" />
+                                <img class="recent-post-image" src="images/noidea2.png" alt="room" />
                             </div>
                             <div class="col-sm-12 col-l-8 col-8 recent-post-description-wrapper">
                                 <span class="row recent-description">Lorem Ipsum Dolor Sit Amet</span>
